delay on hand float to try fix animation on mobile?

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -34,9 +34,9 @@
 }
 
 #manifest_hand {
-  animation: hand-hover 2s ease-in-out forwards infinite alternate;
   position: relative;
   z-index: 1;
+  animation: hand-hover 2s ease-in-out 0.01s forwards infinite alternate;
 }
 
 @keyframes hand-hover {
@@ -44,12 +44,7 @@
     transform: translateY(80%);
   }
 }
-@keyframes hand-hover {
-  100% {
-    transform: translateY(80%);
-  }
-}
-@-webkit-keyframes hand-hover {
+/* @-webkit-keyframes hand-hover {
   100% {
     transform: translateY(80%);
   }
@@ -68,7 +63,7 @@
   100% {
     transform: translateY(80%);
   }
-}
+} */
 
 .hand-shadow {
   display: inline-block;
